// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAllUrlsFromDocsConfig yes-version-no-tabs gets all urls from docs config 1`] = `
[
  "yes-version-no-tabs/docs/api",
  "yes-version-no-tabs/docs/api/section-1",
  "yes-version-no-tabs/docs/api/section-1/page-1",
  "yes-version-no-tabs/docs/api/page-2",
  "yes-version-no-tabs/docs/api/section-2",
  "yes-version-no-tabs/docs/api/section-2/page-4",
  "yes-version-no-tabs/docs/api/page-5",
  "yes-version-no-tabs/docs/api/version-1",
  "yes-version-no-tabs/docs/api/version-1/section-1",
  "yes-version-no-tabs/docs/api/version-1/section-1/page-1",
  "yes-version-no-tabs/docs/api/version-1/page-2",
  "yes-version-no-tabs/docs/api/version-1/section-2",
  "yes-version-no-tabs/docs/api/version-1/section-2/page-4",
  "yes-version-no-tabs/docs/api/version-1/page-5",
  "yes-version-no-tabs/docs/api/version-1/version-1",
  "yes-version-no-tabs/docs/api/version-2",
  "yes-version-no-tabs/docs/api/version-2/page-7",
  "yes-version-no-tabs/docs/api/version-2/page-8",
  "yes-version-no-tabs/docs/api/version-2/section-5",
  "yes-version-no-tabs/docs/api/version-2/version-1",
  "yes-version-no-tabs/docs/api/version-2/section-5/page-10",
]
`;

exports[`getNavigationRoot yes-version-no-tabs gets navigation root for docs/api 1`] = `
{
  "redirect": "/docs/api/page-5",
  "type": "redirect",
}
`;

exports[`getNavigationRoot yes-version-no-tabs gets navigation root for docs/api/page-5 1`] = `
{
  "found": {
    "currentNode": {
      "description": undefined,
      "id": "page-5.md",
      "slug": [
        "docs",
        "api",
        "page-5",
      ],
      "title": "Page 5",
      "type": "page",
      "urlSlug": "page-5",
    },
    "currentTabIndex": -1,
    "currentVersionIndex": 0,
  },
  "type": "found",
}
`;

exports[`getNavigationRoot yes-version-no-tabs gets navigation root for docs/api/section-1 1`] = `
{
  "redirect": "/docs/api/section-1/page-1",
  "type": "redirect",
}
`;

exports[`getNavigationRoot yes-version-no-tabs gets navigation root for docs/api/version-1 1`] = `
{
  "found": {
    "currentNode": {
      "description": undefined,
      "fullSlug": [
        "version-1",
      ],
      "id": "page-6.md",
      "slug": [
        "docs",
        "api",
        "version-1",
      ],
      "title": "Page 6",
      "type": "page",
      "urlSlug": "page-6",
    },
    "currentTabIndex": -1,
    "currentVersionIndex": 0,
  },
  "type": "found",
}
`;

exports[`getNavigationRoot yes-version-no-tabs gets navigation root for docs/api/version-1 2`] = `
{
  "found": {
    "currentNode": {
      "description": undefined,
      "fullSlug": [
        "version-1",
      ],
      "id": "page-6.md",
      "slug": [
        "docs",
        "api",
        "version-1",
      ],
      "title": "Page 6",
      "type": "page",
      "urlSlug": "page-6",
    },
    "currentTabIndex": -1,
    "currentVersionIndex": 0,
  },
  "type": "found",
}
`;

exports[`getNavigationRoot yes-version-no-tabs gets navigation root for docs/api/version-1/page-5 1`] = `
{
  "found": {
    "currentNode": {
      "description": undefined,
      "id": "page-5.md",
      "slug": [
        "docs",
        "api",
        "version-1",
        "page-5",
      ],
      "title": "Page 5",
      "type": "page",
      "urlSlug": "page-5",
    },
    "currentTabIndex": -1,
    "currentVersionIndex": 1,
  },
  "type": "found",
}
`;

exports[`getNavigationRoot yes-version-no-tabs gets navigation root for docs/api/version-1/section-1 1`] = `
{
  "redirect": "/docs/api/version-1/section-1/page-1",
  "type": "redirect",
}
`;

exports[`getNavigationRoot yes-version-no-tabs gets navigation root for docs/api/version-1/version-1 1`] = `
{
  "found": {
    "currentNode": {
      "description": undefined,
      "fullSlug": [
        "version-1",
      ],
      "id": "page-6.md",
      "slug": [
        "docs",
        "api",
        "version-1",
        "version-1",
      ],
      "title": "Page 6",
      "type": "page",
      "urlSlug": "page-6",
    },
    "currentTabIndex": -1,
    "currentVersionIndex": 1,
  },
  "type": "found",
}
`;

exports[`getNavigationRoot yes-version-no-tabs gets navigation root for docs/api/version-2 1`] = `
{
  "redirect": "/docs/api/version-2/page-7",
  "type": "redirect",
}
`;

exports[`getNavigationRoot yes-version-no-tabs gets navigation root for docs/api/version-2/version-1 1`] = `
{
  "found": {
    "currentNode": {
      "description": undefined,
      "fullSlug": [
        "version-1",
      ],
      "id": "page-9.md",
      "slug": [
        "docs",
        "api",
        "version-2",
        "version-1",
      ],
      "title": "Page 9",
      "type": "page",
      "urlSlug": "page-9",
    },
    "currentTabIndex": -1,
    "currentVersionIndex": 2,
  },
  "type": "found",
}
`;
